kubernetes/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-outage 
  namespace: outage
  labels:
    app.kubernetes.io/name: be-outage 
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: be-outage 
  template:
    metadata:
      labels:
        app.kubernetes.io/name: be-outage 
    spec:
      imagePullSecrets:
      - name: gitlab-registry
      volumes:
        - name: properties
          configMap:
            name: be-outage-properties
            optional: true
        - name: otel
          emptyDir:
            sizeLimit: 100Mi
      containers:
      - name: app
        image: p-nexus-01.sec.telecel.net.py:4567/noc/be-outage:1.0.11
        imagePullPolicy: Always
        volumeMounts:
        - name: properties
          mountPath: /opt/daemon/config
          readOnly: true
        - name: otel
          mountPath: /opt/otel
          readOnly: true
        ports:
          - name: backendport
            containerPort: 8080
        resources:
          limits:
            memory: "512Mi"  # Definir límite de memoria en 512 MiB
          requests:
            memory: "256Mi"  # Definir solicitud de memoria en 256 MiB
