kubernetes/base/service.yml
apiVersion: v1
kind: Service
metadata:
 name: be-outage-service
 namespace: outage
 labels:
   app.kubernetes.io/name: be-outage
spec:
 ports:
 - port: 80
   targetPort: backendport
 selector:
   app.kubernetes.io/name: be-outage
